Client added
